--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Hello HTML</h1>
+    <p> Beautiful night</p>
+    <br>
     <img width=600 src="img/MilkyWay_over_Shpizi.jpg" alt="MilkyWay_over_Shpizi"
 </body>
 </html>
