Added some p ul img + style

--- a/index.html
+++ b/index.html
@@ -1,15 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Carpatians Mountains</title>
 </head>
+
 <body>
-    <h1>Hello HTML</h1>
-    <p> Beautiful night</p>
+    <header style="background-color: lightgrey">
+        <br>
+        <table align="center">
+            <tr>
+                <td>
+                    <img width=70 src="img/pngegg.png" alt="logo">
+                </td>
+                <td>
+                    <h1 style="color:#7d1052; text-align: center">Ukrainian Carpathians</h1>
+                </td>
+            </tr>
+        </table>
+        <br>
+    </header>
+
     <br>
-    <img width=600 src="img/MilkyWay_over_Shpizi.jpg" alt="MilkyWay_over_Shpizi"
+    <article style="background-color: #eff6f6">
+        <br>
+        <table align="center">
+            <tr>
+                <td>
+                    <img width=600 height="400" src="img/red-carpatian-mountains.jpg" alt="Red Carpatian Mountains"
+                        title="Red Carpatian Mountains">
+
+                </td>
+                <td>
+                    <img width=600 height="400" src="img/MilkyWay_over_Shpizi.jpg" alt="MilkyWay_over_Shpizi"
+                        title="Shpizi Mountains">
+                </td>
+            </tr>
+        </table>
+        <br>
+        <p><strong>Ukrainian Carpathians</strong> <em>(Ukrainian: Українські Карпати)</em> are a section of the Eastern
+            Carpathians, within the borders of modern Ukraine. They are located in the southwestern corner of Western
+            Ukraine, within administrative territories of four Ukrainian regions (oblasts), covering northeastern part
+            of Zakarpattia Oblast, southwestern part of Lviv Oblast, southern half of Ivano-Frankivsk Oblast and western
+            half of Chernivtsi Oblast.</p>
+        <p>They are stretching in general northwest–southeast direction, starting at the tripartite border point of
+            Ukraine with Poland and Slovakia, and continuing towards Ukrainian border with Romania. In terms of
+            geological
+            classification, Ukrainian Carpathians belong to two distinctive categories, with major part belonging to the
+            <strong>Outer Eastern Carpathians</strong> and minor part to the <strong>Inner Eastern Carpathians</strong>.
+        </p>
+        <p>Within different regional and national traditions, there are several overlapping variants of divisions and
+            designations for various Eastern Carpathian mountain ranges. Within the wider scope of the Ukrainian
+            Carpathians, a section of the Outer Eastern Carpathians spaning southeastern corner of Poland, northeastern
+            corner of Slovakia and western part of Ukraine is commonly known as the Eastern Beskids <em>(Ukrainian:
+                Східні
+                Бескиди</em>; Polish: Beskidy Wschodnie), while in Slovakia the term Meadowed Mountains (Slovak:
+            Poloniny)
+            is also used for the same mountain range. The scope of those terms varies in accordance to different
+            traditions and
+            classifications. </p>
+        <br>
+        <ul>
+            <li>Section of the Inner Eastern Carpathians, within Ukraine:</li>
+            <ul style="list-style-type:none">
+                <li>Vihorlat Mountains (UA: Вигорлат) in Slovakia and Ukraine</li>
+                <li>Makovytsia (UA: Маковиця)</li>
+                <li>Velikyi Dil (UA: Великий Діл)</li>
+                <li>Tupyi (UA: Тупий)</li>
+                <li> Oaș Mountains (UA: Оаш гори) in Ukraine and Romania </li>
+                <li> Maramureș Lowland (UA: Мармароська улоговина) in Ukraine and Romania </li>
+                <li> Maramureș Mountains (UA: Мармароський масив) in Ukraine and Romania </li>
+            </ul>
+            <br>
+            <li>Section of the Outer Eastern Carpathians, within Ukraine:</li>
+            <ul>
+                <li style="list-style-type:none">Wooded Beskids (UA: Лісисті Бескиди):</li>
+                <ul>
+                    <li>Bieszczady Mountains (UK: Бещади); eastern section belongs to Ukraine</li>
+                    <li>Sanok-Turka Mountains (UK: Верхньодністровські Бескиди); eastern section belongs to Ukraine</li>
+                    <li>Skole Beskids (UA: Сколівські Бескиди)</li>
+                    <li>Gorgany (UA: Ґорґани)</li>
+                    <li>Pokuttia-Bucovina Beskids (UA: Покутсько-Буковинські Карпати)</li>
+                </ul>
+                <br>
+                <li style="list-style-type:none">Polonynian Beskids (UA: Полонинські Бескиди):</li>
+                <ul>
+                    <li>Smooth Polonyna (UK: Полонина Рівна)</li>
+                    <li>Polonyna Borzhava (UK: Полонина Боржава)</li>
+                    <li>Polonyna Kuk (UK: Полонина Кук)</li>
+                    <li>Red Polonyna (UK: Полонина Красна)</li>
+                    <li>Svydovets (UK: Свидівець)</li>
+                    <li>Chornohora (UK: Чорногора)</li>
+                    <li>Hrynyavy Mountains (UK: Гриняви) </li>
+                </ul>
+            </ul>
+        </ul>
+        <br>
+    </article>
+    <!-- <aside>
+        From Wikipedia, the free encyclopedia blablabla</p>
+    </aside> -->
+    <footer style="background-color: #e2d7d7;">
+        <br>
+        <p style="text-align: right"> From <a href="https://en.wikipedia.org/wiki/Ukrainian_Carpathians">Wikipedia</a>,
+            the free encyclopedia</p>
+        <br>
+    </footer>
 </body>
+
 </html>
