Just some cosmetics

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
         </table>
         <br>
     </header>
-
-    <br>
     <article style="background-color: #eff6f6">
         <br>
         <table align="center">
@@ -40,7 +38,7 @@
                 </td>
             </tr>
         </table>
-        <br>
+        <h2>Where is it</h3>
         <p><strong>Ukrainian Carpathians</strong> <em>(Ukrainian: Українські Карпати)</em> are a section of the Eastern
             Carpathians, within the borders of modern Ukraine. They are located in the southwestern corner of Western
             Ukraine, within administrative territories of four Ukrainian regions (oblasts), covering northeastern part
@@ -48,21 +46,17 @@
             half of Chernivtsi Oblast.</p>
         <p>They are stretching in general northwest–southeast direction, starting at the tripartite border point of
             Ukraine with Poland and Slovakia, and continuing towards Ukrainian border with Romania. In terms of
-            geological
-            classification, Ukrainian Carpathians belong to two distinctive categories, with major part belonging to the
+            geological classification, Ukrainian Carpathians belong to two distinctive categories, with major part belonging to the
             <strong>Outer Eastern Carpathians</strong> and minor part to the <strong>Inner Eastern Carpathians</strong>.
         </p>
+        <h2>How it dividing</h3>
         <p>Within different regional and national traditions, there are several overlapping variants of divisions and
             designations for various Eastern Carpathian mountain ranges. Within the wider scope of the Ukrainian
             Carpathians, a section of the Outer Eastern Carpathians spaning southeastern corner of Poland, northeastern
             corner of Slovakia and western part of Ukraine is commonly known as the Eastern Beskids <em>(Ukrainian:
-                Східні
-                Бескиди</em>; Polish: Beskidy Wschodnie), while in Slovakia the term Meadowed Mountains (Slovak:
-            Poloniny)
-            is also used for the same mountain range. The scope of those terms varies in accordance to different
-            traditions and
-            classifications. </p>
-        <br>
+            Східні Бескиди</em>; Polish: Beskidy Wschodnie), while in Slovakia the term Meadowed Mountains (Slovak:
+            Poloniny) is also used for the same mountain range. The scope of those terms varies in accordance to different
+            traditions and classifications. </p>
         <ul>
             <li>Section of the Inner Eastern Carpathians, within Ukraine:</li>
             <ul style="list-style-type:none">
