--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </td>
             </tr>
         </table>
-        <h2>Where is it</h3>
+        <h2>Where is it</h2>
         <p><strong>Ukrainian Carpathians</strong> <em>(Ukrainian: Українські Карпати)</em> are a section of the Eastern
             Carpathians, within the borders of modern Ukraine. They are located in the southwestern corner of Western
             Ukraine, within administrative territories of four Ukrainian regions (oblasts), covering northeastern part
@@ -46,16 +46,20 @@
             half of Chernivtsi Oblast.</p>
         <p>They are stretching in general northwest–southeast direction, starting at the tripartite border point of
             Ukraine with Poland and Slovakia, and continuing towards Ukrainian border with Romania. In terms of
-            geological classification, Ukrainian Carpathians belong to two distinctive categories, with major part belonging to the
+            geological classification, Ukrainian Carpathians belong to two distinctive categories, with major part
+            belonging to the
             <strong>Outer Eastern Carpathians</strong> and minor part to the <strong>Inner Eastern Carpathians</strong>.
         </p>
-        <h2>How it dividing</h3>
-        <p>Within different regional and national traditions, there are several overlapping variants of divisions and
+        <h2>How it dividing</h2>
+        <p>Within different regional and national traditions, there are several overlapping <strong>variants of
+                divisions</strong> and
             designations for various Eastern Carpathian mountain ranges. Within the wider scope of the Ukrainian
             Carpathians, a section of the Outer Eastern Carpathians spaning southeastern corner of Poland, northeastern
             corner of Slovakia and western part of Ukraine is commonly known as the Eastern Beskids <em>(Ukrainian:
-            Східні Бескиди</em>; Polish: Beskidy Wschodnie), while in Slovakia the term Meadowed Mountains (Slovak:
-            Poloniny) is also used for the same mountain range. The scope of those terms varies in accordance to different
+                Східні Бескиди; Polish: Beskidy Wschodnie</em>), while in Slovakia the term Meadowed Mountains
+            (<em>Slovak:
+                Poloniny</em>) is also used for the same mountain range. The scope of those terms varies in accordance
+            to different
             traditions and classifications. </p>
         <ul>
             <li>Section of the Inner Eastern Carpathians, within Ukraine:</li>
@@ -94,6 +98,33 @@
         </ul>
         <br>
     </article>
+
+    <table align="center">
+        <tr>
+            <td>
+                <h3>Write a message for Chugaister</h3>
+
+                <form>
+                    <label for="name">Your name:</label>
+                    <input type="text" id="name" placeholder="Mavka">
+                    <br>
+                    <br>
+                    <label for="phone"> Your phone:</label>
+                    <input type="text" id="phone" placeholder="+380000000000">
+                    <br>
+                    <br>
+                    <label for="mess"> Wright here:</label>
+                    <textarea id="mess"> </textarea>
+                    <br>
+                    <br>
+                    <input type="Submit" value="Let it fly!">
+                </form>
+            </td>
+            <td>
+                <img width=200 src="img/chugaister.png" alt="chugaister" title="chugaister">
+            </td>
+        </tr>
+    </table>
     <!-- <aside>
         From Wikipedia, the free encyclopedia blablabla</p>
     </aside> -->
