--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <input type="text" id="phone" placeholder="+380000000000">
                     <br>
                     <br>
-                    <label for="mess"> Wright here:</label>
+                    <label for="mess"> Write here:</label>
                     <textarea id="mess"> </textarea>
                     <br>
                     <br>
