--- a/index.html
+++ b/index.html
@@ -46,15 +46,19 @@
             </div>
         </div>
     </header>
-    <!-- <span class="w">W</span> -->
+
     <main class="main">
-        <div id="watch">
-            <video id="video" controls poster="img/red-carpathians.jpg">
+        <div id="video">
+            <h2><span style="font-size: 3rem" class="material-icons material"> play_circle </span><span
+                    class="w">W</span>atch video</h2>
+            <video id="watch" controls poster="img/red-carpathians.jpg">
                 <source src="video/magical-carpatians.mp4" type="video/mp4">
             </video>
         </div>
-   
-        <h2 id="where"><span class="w">W</span>here is it</h2>
+
+        <h2 id="where"> <span style="font-size: 3rem" class="material-icons material"> place </span> <span
+                class="w">W</span>here is it
+        </h2>
         <p><strong>Ukrainian Carpathians</strong> <em>(Ukrainian: Українські Карпати)</em> are a section of the Eastern
             Carpathians, within the borders of modern Ukraine. They are located in the southwestern corner of Western
             Ukraine, within administrative territories of four Ukrainian regions (oblasts), covering northeastern part
@@ -66,13 +70,17 @@
             belonging to the
             <strong>Outer Eastern Carpathians</strong> and minor part to the <strong>Inner Eastern Carpathians</strong>.
         </p>
-        <img width=640 height="360" src="img/milkyway-over-shpizi.jpg" alt="MilkyWay over Shpizi Mountain"
-        title="Shpizi Mountain">
-        
-        <h2 id="how">ho<span class="w">W</span> it dividing</h2>
+        <img id="map" src="img/map-of-karpathians.png" alt="Map of the Karpatians">
+
+        <!-- <img width=640 height="360" src="img/milkyway-over-shpizi.jpg" alt="MilkyWay over Shpizi Mountain"
+            title="Shpizi Mountain"> -->
+
+        <h2 id="how"><span style="font-size: 3rem" class="material-icons material"> travel_explore </span>ho<span
+                class="w">W</span> it dividing
+        </h2>
         <p>Within different regional and national traditions, there are several overlapping <strong>variants of
-                divisions</strong> and
-            designations for various Eastern Carpathian mountain ranges. Within the wider scope of the Ukrainian
+                divisions</strong> and designations for various Eastern Carpathian mountain ranges. Within the wider
+            scope of the Ukrainian
             Carpathians, a section of the Outer Eastern Carpathians spaning southeastern corner of Poland, northeastern
             corner of Slovakia and western part of Ukraine is commonly known as the Eastern Beskids <em>(Ukrainian:
                 Східні Бескиди; Polish: Beskidy Wschodnie</em>), while in Slovakia the term Meadowed Mountains
@@ -80,91 +88,103 @@
                 Poloniny</em>) is also used for the same mountain range. The scope of those terms varies in accordance
             to different
             traditions and classifications. </p>
-        <ul>
-            <li>Section of the Inner Eastern Carpathians, within Ukraine:</li>
-            <ul style="list-style-type:none">
-                <li>Vihorlat Mountains (UA: Вигорлат) in Slovakia and Ukraine</li>
-                <li>Makovytsia (UA: Маковиця)</li>
-                <li>Velikyi Dil (UA: Великий Діл)</li>
-                <li>Tupyi (UA: Тупий)</li>
-                <li>Oaș Mountains (UA: Оаш гори) in Ukraine and Romania </li>
-                <li>Maramureș Lowland (UA: Мармароська улоговина) in Ukraine and Romania </li>
-                <li>Maramureș Mountains (UA: Мармароський масив) in Ukraine and Romania </li>
-            </ul>
-            <br>
-            <li>Section of the Outer Eastern Carpathians, within Ukraine:</li>
-            <ul>
-                <li style="list-style-type:none">Wooded Beskids (UA: Лісисті Бескиди):</li>
-                <ul>
-                    <li>Bieszczady Mountains (UK: Бещади); eastern section belongs to Ukraine</li>
-                    <li>Sanok-Turka Mountains (UK: Верхньодністровські Бескиди); eastern section belongs to Ukraine</li>
-                    <li>Skole Beskids (UA: Сколівські Бескиди)</li>
-                    <li>Gorgany (UA: Ґорґани)</li>
-                    <li>Pokuttia-Bucovina Beskids (UA: Покутсько-Буковинські Карпати)</li>
-                </ul>
-                <br>
-                <li style="list-style-type:none">Polonynian Beskids (UA: Полонинські Бескиди):</li>
-                <ul>
-                    <li>Smooth Polonyna (UK: Полонина Рівна)</li>
-                    <li>Polonyna Borzhava (UK: Полонина Боржава)</li>
-                    <li>Polonyna Kuk (UK: Полонина Кук)</li>
-                    <li>Red Polonyna (UK: Полонина Красна)</li>
-                    <li>Svydovets (UK: Свидівець)</li>
-                    <li>Chornohora (UK: Чорногора)</li>
-                    <li>Hrynyavy Mountains (UK: Гриняви) </li>
-                </ul>
-            </ul>
-        </ul>
-        <br>
+
+        <div class="wrapper">
+            <div class="card">
+                <img src="img/makovitsya-mountain.jpg" alt="Makovitsya Mountain" title="Makovitsya Mountain"
+                    style="width:100%">
+                <div class="container">
+                    <h3><b>Section of the Inner Eastern Carpathians, within Ukraine</b></h3>
+                    <ul style="list-style-type:none">
+                        <li>Vihorlat Mountains (UA: Вигорлат) in Slovakia and Ukraine</li>
+                        <li>Makovytsia (UA: Маковиця)</li>
+                        <li>Velikyi Dil (UA: Великий Діл)</li>
+                        <li>Tupyi (UA: Тупий)</li>
+                        <li>Oaș Mountains (UA: Оаш гори)*</li>
+                        <li>Maramureș Lowland (UA: Мармароська улоговина)*</li>
+                        <li>Maramureș Mountains (UA: Мармароський масив)*</li>
+                        <li style="text-align: right;">* - in Ukraine and Romania </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="img/gorgany-mountains.jpg" alt="Gorgany Mountains" title="Gorgany Mountains"
+                    style="width:100%">
+                <div class="container">
+                    <h3><b>Section of the Outer Eastern Carpathians, within Ukraine</b></h3>
+                    <h4> Wooded Beskids (UA: Лісисті Бескиди):</h4>
+                    <ul style="list-style-type:none">
+                        <li>Bieszczady Mountains (UK: Бещади)** </li>
+                        <li>Sanok-Turka Mountains (UK: Верхньодністровські Бескиди)**</li>
+                        <li>Skole Beskids (UA: Сколівські Бескиди)</li>
+                        <li>Gorgany (UA: Ґорґани)</li>
+                        <li>Pokuttia-Bucovina Beskids (UA: Покутсько-Буковинські Карпати)</li>
+                        <li style="text-align: right;">** - eastern section belongs to Ukraine</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="img/chornohora-mountains.jpg" alt="Nesamovyte lake in the Chorohora Mountains"
+                    title="Cyjrnohora Mountains" style="width:100%">
+                <div class="container">
+                    <h3><b>Section of the Outer Eastern Carpathians, within Ukraine</b></h3>
+                    <h4>Polonynian Beskids (UA: Полонинські Бескиди):</h4>
+                    <ul style="list-style-type:none">
+                        <li>Smooth Polonyna (UK: Полонина Рівна)</li>
+                        <li>Polonyna Borzhava (UK: Полонина Боржава)</li>
+                        <li>Polonyna Kuk (UK: Полонина Кук)</li>
+                        <li>Red Polonyna (UK: Полонина Красна)</li>
+                        <li>Svydovets (UK: Свидівець)</li>
+                        <li>Chornohora (UK: Чорногора)</li>
+                        <li>Hrynyavy Mountains (UK: Гриняви) </li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
-        <table align="center">
-            <tr>
-                <td>
-                    <h3 id="write"><span class="w">W</span>rite a message for Chugaister</h3>
+        <div class="wrapper">
+            <div>
+                <table>
+                    <tr>
+                        <td>
+                            <h2 id="write"><span style="font-size: 3rem" class="material-icons material"> send
+                                </span><span class="w">W</span>rite a message for Chugaister</h2>
 
-                    <form id="form" action="https://www.freecodecamp.com/email-submit">
-                        <label for="name">Your name:</label>
-                        <input type="text" id="name" placeholder="Mavka" required>
-                        <br>
-                        <br>
-                        <label for="phone"> Your phone:</label>
-                        <input type="text" id="phone" placeholder="+380000000000"><br><br>
-                        <label for="email">E-mail:</label>
-                        <input type="email" id="email" placeholder="mavka@carpat-mail.com" required>
-                        <br>
-                        <br>
-                        <label for="mess"> Write here:</label>
-                        <textarea id="mess"> </textarea>
-                        <br>
-                        <br>
-                        <input type="Submit" id="submit" value="Let it fly!">
-                    </form>
-                </td>
-                <td>
-                    <img width=200 src="img/chugaister.png" alt="chugaister" title="chugaister">
-                </td>
-            </tr>
-        </table>
+                            <form id="form" action="https://www.freecodecamp.com/email-submit">
+                                <label for="name">Your name:</label>
+                                <input type="text" id="name" placeholder="Mavka" required>
+                                <br>
+                                <br>
+                                <label for="phone"> Your phone:</label>
+                                <input type="text" id="phone" placeholder="+380000000000"><br><br>
+                                <label for="email">E-mail:</label>
+                                <input type="email" id="email" placeholder="mavka@carpat-mail.com" required>
+                                <br>
+                                <br>
+                                <label for="mess"> Write here:</label>
+                                <textarea id="mess"> </textarea>
+                                <br>
+                                <br>
+                                <input type="Submit" id="submit" value="Let it fly!">
+                            </form>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img width=200 src="img/chugaister.png" alt="chugaister" title="chugaister">
+            </div>
+        </div>
+
+
 
     </main>
     <footer style="background-color: #e2d7d7;">
-        <br>
         <p style="text-align: right"> From <a href="https://en.wikipedia.org/wiki/Ukrainian_Carpathians">Wikipedia</a>,
             the free encyclopedia</p>
-        <br>
     </footer>
-
-    <!-- <script>
-        function myFunction() {
-            var x = document.getElementById("nav-bar");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-    </script> -->
 
 </body>
 
